--- a/welcome.html
+++ b/welcome.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <meta http-equiv="refresh" content="5;url=page4.html" />
-    <title>Home Page</title>
+    <meta http-equiv="refresh" content="3;url=page3.html" />
+    <title>Welcome Page</title>
   </head>
-
   <body>
-    <div class="home-container">
-      <a href="page4.html">
-        <img src="enter.jpg" alt="Main Page" class="home-image" />
-      </a>
+    <div class="welcome-container">
+      <h1>Welcome to Our Website</h1>
+      <p>Thank you for registering!</p>
     </div>
   </body>
 </html>
